# afba

./: local.properties
app/: build.gradle
app/jni/: Application.mk  CMakeLists.txt
app/jni/SDL/: Android.mk  CMakeLists.txt
app/jni/SDL/src/thread/pthread/: SDL_systhread.c
app/jni/libpng/: Android.mk  CMakeLists.txt
app/jni/src/: Android.mk  CMakeLists.txt
app/jni/src/burn/: Android.mk
app/jni/src/burner/: Android.mk  cong.cpp  dat.cpp  gami.cpp  sshot.cpp
app/jni/src/burner/sdl/: bzip.cpp
app/jni/src/cpu/: Android.mk
app/jni/src/dep/libs/lib7z/: Android.mk
app/jni/src/intf/audio/sdl/: aud_sdl.cpp
app/jni/src/intf/input/sdl/: inp_sdl.cpp
app/jni/src/intf/video/: vid_softfx.cpp
app/jni/src/intf/video/sdl/: vid_sdlopengl.cpp
app/src/main/: AndroidManifest.xml
