cmake_minimum_required(VERSION 3.4.1)
set(CMAKE_C_STANDARD 11)

include_directories(
        burn/
        burn/snd/
        burn/devices/
        burn/drv/neogeo/
        burner/
        burner/libretro/
        ../SDL/include/
        cpu/
        intf/
        intf/input/
        intf/cd/
        intf/video/
        intf/video/scalers/
        dep/
        dep/generated/
        )

add_library(arcade SHARED
        android/android.cpp
        android/android_input.cpp
        android/android_main.cpp
        android/android_run.cpp
        android/android_sdlfx.cpp
        android/android_snd.cpp
        android/android_softfx.cpp
        android/android_stated.cpp
        burn/burn_gun.cpp
        burn/burn.cpp
        burn/burn_sound_c.cpp
        burn/burn_sound.cpp
        burn/hiscore.cpp
        burn/debug_track.cpp
        burn/burn_led.cpp
        burn/load.cpp
        burn/burn_memory.cpp
        burn/cheat.cpp
        burn/tiles_generic.cpp
        burn/timer.cpp
        burn/vector.cpp
        burn/devices/8255ppi.cpp
        burn/devices/8257dma.cpp
        burn/devices/eeprom.cpp
        burn/devices/kaneko_tmap.cpp
        burn/devices/nmk004.cpp
        burn/devices/pandora.cpp
        burn/devices/seibusnd.cpp
        burn/devices/sknsspr.cpp
        burn/devices/slapstic.cpp
        burn/devices/t5182.cpp
        burn/devices/timekpr.cpp
        burn/devices/tms9928a.cpp
        burn/devices/tms34061.cpp
        burn/devices/v3021.cpp
        burn/devices/vdc.cpp
        burn/snd/ay8910.c
        burn/snd/burn_y8950.cpp
        burn/snd/burn_ym2151.cpp
        burn/snd/burn_ym2203.cpp
        burn/snd/burn_ym2413.cpp
        burn/snd/burn_ym2608.cpp
        burn/snd/burn_ym2610.cpp
        burn/snd/burn_ym2612.cpp
        burn/snd/burn_ym3526.cpp
        burn/snd/burn_ym3812.cpp
        burn/snd/burn_ymf278b.cpp
        burn/snd/c6280.cpp
        burn/snd/dac.cpp
        burn/snd/es5506.cpp
        burn/snd/es8712.cpp
        burn/snd/flt_rc.cpp
        burn/snd/fm.c
        burn/snd/fmopl.c
        burn/snd/ics2115.cpp
        burn/snd/iremga20.cpp
        burn/snd/k005289.cpp
        burn/snd/k007232.cpp
        burn/snd/k051649.cpp
        burn/snd/k053260.cpp
        burn/snd/k054539.cpp
        burn/snd/msm5205.cpp
        burn/snd/msm5232.cpp
        burn/snd/msm6295.cpp
        burn/snd/namco_snd.cpp
        burn/snd/nes_apu.cpp
        burn/snd/rf5c68.cpp
        burn/snd/saa1099.cpp
        burn/snd/samples.cpp
        burn/snd/segapcm.cpp
        burn/snd/sn76496.cpp
        burn/snd/upd7759.cpp
        burn/snd/vlm5030.cpp
        burn/snd/x1010.cpp
        burn/snd/ym2151.c
        burn/snd/ym2413.c
        burn/snd/ymdeltat.c
        burn/snd/ymf278b.c
        burn/snd/ymz280b.cpp
        burn/drv/d_parent.cpp
        burn/drv/capcom/cps_mem.cpp
        burn/drv/capcom/cps.cpp
        burn/drv/capcom/cps_config.cpp
        burn/drv/capcom/cps_rw.cpp
        burn/drv/capcom/cps_obj.cpp
        burn/drv/capcom/cps_scr.cpp
        burn/drv/capcom/cpsrd.cpp
        burn/drv/capcom/cps_draw.cpp
        burn/drv/capcom/cps_run.cpp
        burn/drv/capcom/cps2_crpt.cpp
        burn/drv/capcom/cpsr.cpp
        burn/drv/capcom/cps_pal.cpp
        burn/drv/capcom/cpst.cpp
        burn/drv/capcom/ctv.cpp
        burn/drv/capcom/ctv_make.cpp
        burn/drv/capcom/d_cps1.cpp
        burn/drv/capcom/d_cps2.cpp
        burn/drv/capcom/fcrash_snd.cpp
        burn/drv/capcom/kabuki.cpp
        burn/drv/capcom/ps.cpp
        burn/drv/capcom/ps_m.cpp
        burn/drv/capcom/ps_z.cpp
        burn/drv/capcom/qs.cpp
        burn/drv/capcom/qs_c.cpp
        burn/drv/capcom/qs_z.cpp
        burn/drv/capcom/sf2mdt_snd.cpp
        burn/drv/cave/cave_sprite.cpp
        burn/drv/cave/cave.cpp
        burn/drv/cave/d_dodonpachi.cpp
        burn/drv/cave/d_donpachi.cpp
        burn/drv/cave/cave_tile.cpp
        burn/drv/cave/cave_palette.cpp
        burn/drv/cave/d_esprade.cpp
        burn/drv/cave/d_feversos.cpp
        burn/drv/cave/d_gaia.cpp
        burn/drv/cave/d_guwange.cpp
        burn/drv/cave/d_hotdogst.cpp
        burn/drv/cave/d_korokoro.cpp
        burn/drv/cave/d_mazinger.cpp
        burn/drv/cave/d_metmqstr.cpp
        burn/drv/cave/d_pwrinst2.cpp
        burn/drv/cave/d_sailormn.cpp
        burn/drv/cave/d_tjumpman.cpp
        burn/drv/cave/d_uopoko.cpp
        burn/drv/coleco/d_coleco.cpp
        burn/drv/cps3/cps3run.cpp
        burn/drv/cps3/cps3snd.cpp
        burn/drv/cps3/d_cps3.cpp
        burn/drv/dataeast/d_actfancr.cpp
        burn/drv/dataeast/d_backfire.cpp
        burn/drv/dataeast/d_boogwing.cpp
        burn/drv/dataeast/d_cbuster.cpp
        burn/drv/dataeast/d_cninja.cpp
        burn/drv/dataeast/d_darkseal.cpp
        burn/drv/dataeast/d_dassault.cpp
        burn/drv/dataeast/d_dec0.cpp
        burn/drv/dataeast/d_dec8.cpp
        burn/drv/dataeast/d_dietgogo.cpp
        burn/drv/dataeast/d_funkyjet.cpp
        burn/drv/dataeast/d_karnov.cpp
        burn/drv/dataeast/d_lemmings.cpp
        burn/drv/dataeast/d_pktgaldx.cpp
        burn/drv/dataeast/d_rohga.cpp
        burn/drv/dataeast/d_sidepckt.cpp
        burn/drv/dataeast/d_simpl156.cpp
        burn/drv/dataeast/d_supbtime.cpp
        burn/drv/dataeast/d_tumblep.cpp
        burn/drv/dataeast/d_vaportra.cpp
        burn/drv/dataeast/deco16ic.cpp
        burn/drv/galaxian/d_galaxian.cpp
        burn/drv/galaxian/gal_gfx.cpp
        burn/drv/galaxian/gal_run.cpp
        burn/drv/galaxian/gal_sound.cpp
        burn/drv/galaxian/gal_stars.cpp
        burn/drv/irem/d_m62.cpp
        burn/drv/irem/d_m63.cpp
        burn/drv/irem/d_m72.cpp
        burn/drv/irem/d_m90.cpp
        burn/drv/irem/d_m92.cpp
        burn/drv/irem/d_m107.cpp
        burn/drv/irem/d_vigilant.cpp
        burn/drv/irem/irem_cpu.cpp
        burn/drv/konami/k053245.cpp
        burn/drv/konami/d_xmen.cpp
        burn/drv/konami/d_hcastle.cpp
        burn/drv/konami/d_gyruss.cpp
        burn/drv/konami/k051733.cpp
        burn/drv/konami/d_tmnt.cpp
        burn/drv/konami/d_lethal.cpp
        burn/drv/konami/k054338.cpp
        burn/drv/konami/k055555.cpp
        burn/drv/konami/d_bottom9.cpp
        burn/drv/konami/d_twin16.cpp
        burn/drv/konami/d_yiear.cpp
        burn/drv/konami/d_labyrunr.cpp
        burn/drv/konami/d_megazone.cpp
        burn/drv/konami/d_bishi.cpp
        burn/drv/konami/d_kontest.cpp
        burn/drv/konami/d_timeplt.cpp
        burn/drv/konami/d_moo.cpp
        burn/drv/konami/d_surpratk.cpp
        burn/drv/konami/timeplt_snd.cpp
        burn/drv/konami/d_circusc.cpp
        burn/drv/konami/d_dbz.cpp
        burn/drv/konami/k052109.cpp
        burn/drv/konami/k053247.cpp
        burn/drv/konami/konamiic.cpp
        burn/drv/konami/d_ironhors.cpp
        burn/drv/konami/d_mystwarr.cpp
        burn/drv/konami/d_xexex.cpp
        burn/drv/konami/d_bladestl.cpp
        burn/drv/konami/d_gbusters.cpp
        burn/drv/konami/k053250.cpp
        burn/drv/konami/k053251.cpp
        burn/drv/konami/d_blockhl.cpp
        burn/drv/konami/d_rockrage.cpp
        burn/drv/konami/d_88games.cpp
        burn/drv/konami/d_thunderx.cpp
        burn/drv/konami/d_gradius3.cpp
        burn/drv/konami/d_nemesis.cpp
        burn/drv/konami/d_rollerg.cpp
        burn/drv/konami/d_shaolins.cpp
        burn/drv/konami/d_aliens.cpp
        burn/drv/konami/k054000.cpp
        burn/drv/konami/d_jailbrek.cpp
        burn/drv/konami/d_hexion.cpp
        burn/drv/konami/d_finalzr.cpp
        burn/drv/konami/d_asterix.cpp
        burn/drv/konami/k053936.cpp
        burn/drv/konami/d_scotrsht.cpp
        burn/drv/konami/d_crimfght.cpp
        burn/drv/konami/k051960.cpp
        burn/drv/konami/d_gberet.cpp
        burn/drv/konami/k056832.cpp
        burn/drv/konami/konamigx.cpp
        burn/drv/konami/d_mainevt.cpp
        burn/drv/konami/d_vendetta.cpp
        burn/drv/konami/d_spy.cpp
        burn/drv/konami/k007342_k007420.cpp
        burn/drv/konami/d_simpsons.cpp
        burn/drv/konami/d_pooyan.cpp
        burn/drv/konami/d_parodius.cpp
        burn/drv/konami/d_contra.cpp
        burn/drv/konami/d_mikie.cpp
        burn/drv/konami/d_battlnts.cpp
        burn/drv/konami/d_mogura.cpp
        burn/drv/konami/d_tp84.cpp
        burn/drv/konami/d_rocnrope.cpp
        burn/drv/konami/d_ajax.cpp
        burn/drv/konami/d_gijoe.cpp
        burn/drv/konami/d_pandoras.cpp
        burn/drv/konami/d_ultraman.cpp
        burn/drv/konami/d_tutankhm.cpp
        burn/drv/konami/k051316.cpp
        burn/drv/megadrive/d_megadrive.cpp
        burn/drv/megadrive/megadrive.cpp
        burn/drv/midway/d_kinst.cpp
        burn/drv/midway/ide.cpp
        burn/drv/neogeo/d_neogeo.cpp
        burn/drv/neogeo/neo_decrypt.cpp
        burn/drv/neogeo/neo_palette.cpp
        burn/drv/neogeo/neo_run.cpp
        burn/drv/neogeo/neo_sprite.cpp
        burn/drv/neogeo/neo_text.cpp
        burn/drv/neogeo/neo_upd4990a.cpp
        burn/drv/neogeo/neogeo.cpp
        burn/drv/pce/d_pce.cpp
        burn/drv/pce/pce.cpp
        burn/drv/pgm/d_pgm.cpp
        burn/drv/pgm/pgm_asic3.cpp
        burn/drv/pgm/pgm_asic25.cpp
        burn/drv/pgm/pgm_asic27a_type1.cpp
        burn/drv/pgm/pgm_asic27a_type2.cpp
        burn/drv/pgm/pgm_asic27a_type3.cpp
        burn/drv/pgm/pgm_crypt.cpp
        burn/drv/pgm/pgm_draw.cpp
        burn/drv/pgm/pgm_run.cpp
#        burn/drv/pgm/pgm_sprite_create.cpp
        burn/drv/pre90s/d_4enraya.cpp
        burn/drv/pre90s/d_1942.cpp
        burn/drv/pre90s/d_1943.cpp
        burn/drv/pre90s/d_alinvade.cpp
        burn/drv/pre90s/d_alpha68k.cpp
        burn/drv/pre90s/d_ambush.cpp
        burn/drv/pre90s/d_arabian.cpp
        burn/drv/pre90s/d_armedf.cpp
        burn/drv/pre90s/d_atetris.cpp
        burn/drv/pre90s/d_aztarac.cpp
        burn/drv/pre90s/d_baraduke.cpp
        burn/drv/pre90s/d_bionicc.cpp
        burn/drv/pre90s/d_blktiger.cpp
        burn/drv/pre90s/d_blockout.cpp
        burn/drv/pre90s/d_blueprnt.cpp
        burn/drv/pre90s/d_bombjack.cpp
        burn/drv/pre90s/d_capbowl.cpp
        burn/drv/pre90s/d_commando.cpp
        burn/drv/pre90s/d_cybertnk.cpp
        burn/drv/pre90s/d_ddragon.cpp
        burn/drv/pre90s/d_djboy.cpp
        burn/drv/pre90s/d_dkong.cpp
        burn/drv/pre90s/d_dynduke.cpp
        burn/drv/pre90s/d_epos.cpp
        burn/drv/pre90s/d_exedexes.cpp
        burn/drv/pre90s/d_funkybee.cpp
        burn/drv/pre90s/d_galaga.cpp
        burn/drv/pre90s/d_gauntlet.cpp
        burn/drv/pre90s/d_ginganin.cpp
        burn/drv/pre90s/d_gng.cpp
        burn/drv/pre90s/d_gunsmoke.cpp
        burn/drv/pre90s/d_higemaru.cpp
        burn/drv/pre90s/d_ikki.cpp
        burn/drv/pre90s/d_invaders.cpp
        burn/drv/pre90s/d_jack.cpp
        burn/drv/pre90s/d_kangaroo.cpp
        burn/drv/pre90s/d_kncljoe.cpp
        burn/drv/pre90s/d_kyugo.cpp
        burn/drv/pre90s/d_ladybug.cpp
        burn/drv/pre90s/d_lastduel.cpp
        burn/drv/pre90s/d_lwings.cpp
        burn/drv/pre90s/d_marineb.cpp
        burn/drv/pre90s/d_mario.cpp
        burn/drv/pre90s/d_markham.cpp
        burn/drv/pre90s/d_megasys1.cpp
        burn/drv/pre90s/d_meijinsn.cpp
        burn/drv/pre90s/d_mitchell.cpp
        burn/drv/pre90s/d_mole.cpp
        burn/drv/pre90s/d_momoko.cpp
        burn/drv/pre90s/d_mrdo.cpp
        burn/drv/pre90s/d_mrflea.cpp
        burn/drv/pre90s/d_mustache.cpp
        burn/drv/pre90s/d_mystston.cpp
        burn/drv/pre90s/d_ninjakd2.cpp
        burn/drv/pre90s/d_pac2650.cpp
        burn/drv/pre90s/d_pacland.cpp
        burn/drv/pre90s/d_pacman.cpp
        burn/drv/pre90s/d_pkunwar.cpp
        burn/drv/pre90s/d_prehisle.cpp
        burn/drv/pre90s/d_psychic5.cpp
        burn/drv/pre90s/d_punchout.cpp
        burn/drv/pre90s/d_quizo.cpp
        burn/drv/pre90s/d_rallyx.cpp
        burn/drv/pre90s/d_renegade.cpp
        burn/drv/pre90s/d_route16.cpp
        burn/drv/pre90s/d_rpunch.cpp
        burn/drv/pre90s/d_scregg.cpp
        burn/drv/pre90s/d_sf.cpp
        burn/drv/pre90s/d_sidearms.cpp
        burn/drv/pre90s/d_skyarmy.cpp
        burn/drv/pre90s/d_skyfox.cpp
        burn/drv/pre90s/d_skykid.cpp
        burn/drv/pre90s/d_snk68.cpp
        burn/drv/pre90s/d_solomon.cpp
        burn/drv/pre90s/d_sonson.cpp
        burn/drv/pre90s/d_srumbler.cpp
        burn/drv/pre90s/d_suna8.cpp
        burn/drv/pre90s/d_tail2nose.cpp
        burn/drv/pre90s/d_tbowl.cpp
        burn/drv/pre90s/d_tecmo.cpp
        burn/drv/pre90s/d_terracre.cpp
        burn/drv/pre90s/d_tigeroad.cpp
        burn/drv/pre90s/d_timelimt.cpp
        burn/drv/pre90s/d_toki.cpp
        burn/drv/pre90s/d_tsamurai.cpp
        burn/drv/pre90s/d_vulgus.cpp
        burn/drv/pre90s/d_wallc.cpp
        burn/drv/pre90s/d_wc90.cpp
        burn/drv/pre90s/d_wc90b.cpp
        burn/drv/pre90s/d_wwfsstar.cpp
        burn/drv/pre90s/d_xain.cpp
        burn/drv/pre90s/d_xxmissio.cpp
        burn/drv/psikyo/d_psikyo.cpp
        burn/drv/psikyo/d_psikyo4.cpp
        burn/drv/psikyo/d_psikyosh.cpp
        burn/drv/psikyo/psikyo_palette.cpp
        burn/drv/psikyo/psikyo_sprite.cpp
        burn/drv/psikyo/psikyo_tile.cpp
        burn/drv/psikyo/psikyosh_render.cpp
        burn/drv/pst90s/d_1945kiii.cpp
        burn/drv/pst90s/d_aerofgt.cpp
        burn/drv/pst90s/d_airbustr.cpp
        burn/drv/pst90s/d_aquarium.cpp
        burn/drv/pst90s/d_blmbycar.cpp
        burn/drv/pst90s/d_bloodbro.cpp
        burn/drv/pst90s/d_crospang.cpp
        burn/drv/pst90s/d_crshrace.cpp
        burn/drv/pst90s/d_dcon.cpp
        burn/drv/pst90s/d_ddragon3.cpp
        burn/drv/pst90s/d_deniam.cpp
        burn/drv/pst90s/d_diverboy.cpp
        burn/drv/pst90s/d_dooyong.cpp
        burn/drv/pst90s/d_drgnmst.cpp
        burn/drv/pst90s/d_drtomy.cpp
        burn/drv/pst90s/d_egghunt.cpp
        burn/drv/pst90s/d_esd16.cpp
        burn/drv/pst90s/d_f1gp.cpp
        burn/drv/pst90s/d_funybubl.cpp
        burn/drv/pst90s/d_fuukifg3.cpp
        burn/drv/pst90s/d_gaelco.cpp
        burn/drv/pst90s/d_gaiden.cpp
        burn/drv/pst90s/d_galpanic.cpp
        burn/drv/pst90s/d_galspnbl.cpp
        burn/drv/pst90s/d_gotcha.cpp
        burn/drv/pst90s/d_gumbo.cpp
        burn/drv/pst90s/d_hyperpac.cpp
        burn/drv/pst90s/d_jchan.cpp
        burn/drv/pst90s/d_kaneko16.cpp
        burn/drv/pst90s/d_lordgun.cpp
        burn/drv/pst90s/d_mcatadv.cpp
        burn/drv/pst90s/d_midas.cpp
        burn/drv/pst90s/d_mugsmash.cpp
        burn/drv/pst90s/d_mwarr.cpp
        burn/drv/pst90s/d_news.cpp
        burn/drv/pst90s/d_nmg5.cpp
        burn/drv/pst90s/d_nmk16.cpp
        burn/drv/pst90s/d_ohmygod.cpp
        burn/drv/pst90s/d_pass.cpp
        burn/drv/pst90s/d_pirates.cpp
        burn/drv/pst90s/d_playmark.cpp
        burn/drv/pst90s/d_powerins.cpp
        burn/drv/pst90s/d_pushman.cpp
        burn/drv/pst90s/d_raiden.cpp
        burn/drv/pst90s/d_raiden2.cpp
        burn/drv/pst90s/d_sandscrp.cpp
        burn/drv/pst90s/d_seta.cpp
        burn/drv/pst90s/d_seta2.cpp
        burn/drv/pst90s/d_shadfrce.cpp
        burn/drv/pst90s/d_silkroad.cpp
        burn/drv/pst90s/d_silvmil.cpp
        burn/drv/pst90s/d_speedspn.cpp
        burn/drv/pst90s/d_suna16.cpp
        burn/drv/pst90s/d_suprnova.cpp
        burn/drv/pst90s/d_taotaido.cpp
        burn/drv/pst90s/d_tecmo16.cpp
        burn/drv/pst90s/d_tecmosys.cpp
        burn/drv/pst90s/d_tetrisp2.cpp
        burn/drv/pst90s/d_tumbleb.cpp
        burn/drv/pst90s/d_unico.cpp
        burn/drv/pst90s/d_vmetal.cpp
        burn/drv/pst90s/d_welltris.cpp
        burn/drv/pst90s/d_wwfwfest.cpp
        burn/drv/pst90s/d_xorworld.cpp
        burn/drv/pst90s/d_yunsun16.cpp
        burn/drv/pst90s/d_zerozone.cpp
        burn/drv/sega/d_angelkds.cpp
        burn/drv/sega/d_bankp.cpp
        burn/drv/sega/d_dotrikun.cpp
        burn/drv/sega/d_hangon.cpp
        burn/drv/sega/d_outrun.cpp
        burn/drv/sega/d_suprloco.cpp
        burn/drv/sega/d_sys1.cpp
        burn/drv/sega/d_sys16a.cpp
        burn/drv/sega/d_sys16b.cpp
        burn/drv/sega/d_sys18.cpp
        burn/drv/sega/d_xbrd.cpp
        burn/drv/sega/d_ybrd.cpp
        burn/drv/sega/d_zaxxon.cpp
        burn/drv/sega/fd1089.cpp
        burn/drv/sega/fd1094.cpp
        burn/drv/sega/genesis_vid.cpp
        burn/drv/sega/mc8123.cpp
        burn/drv/sega/sys16_fd1094.cpp
        burn/drv/sega/sys16_gfx.cpp
        burn/drv/sega/sys16_run.cpp
        burn/drv/sg1000/d_sg1000.cpp
        burn/drv/sms/d_sms.cpp
        burn/drv/sms/sms.cpp
        burn/drv/sms/smsfmintf.cpp
        burn/drv/sms/smspio.cpp
        burn/drv/sms/smsrender.cpp
        burn/drv/sms/smssound.cpp
        burn/drv/sms/smssystem.cpp
        burn/drv/sms/smstms.cpp
        burn/drv/sms/smsvdp.cpp
        burn/drv/snes/d_snes.cpp
        burn/drv/snes/snes_65816.cpp
        burn/drv/snes/snes_io.cpp
        burn/drv/snes/snes_main.cpp
        burn/drv/snes/snes_ppu.cpp
        burn/drv/snes/snes_spc700.cpp
        burn/drv/taito/d_lkage.cpp
        burn/drv/taito/d_chaknpop.cpp
        burn/drv/taito/d_flstory.cpp
        burn/drv/taito/d_tnzs.cpp
        burn/drv/taito/d_superchs.cpp
        burn/drv/taito/d_taitob.cpp
        burn/drv/taito/d_slapshot.cpp
        burn/drv/taito/d_retofinv.cpp
        burn/drv/taito/d_exzisus.cpp
        burn/drv/taito/d_taitof2.cpp
        burn/drv/taito/d_taitomisc.cpp
        burn/drv/taito/d_taitoz.cpp
        burn/drv/taito/d_bublbobl.cpp
        burn/drv/taito/cchip.cpp
        burn/drv/taito/pc080sn.cpp
        burn/drv/taito/d_darkmist.cpp
        burn/drv/taito/d_othunder.cpp
        burn/drv/taito/pc090oj.cpp
        burn/drv/taito/d_ashnojoe.cpp
        burn/drv/taito/d_minivdr.cpp
        burn/drv/taito/d_taitox.cpp
        burn/drv/taito/d_darius2.cpp
        burn/drv/taito/d_wyvernf0.cpp
        burn/drv/taito/d_arkanoid.cpp
        burn/drv/taito/d_asuka.cpp
        burn/drv/taito/taito.cpp
        burn/drv/taito/taito_ic.cpp
        burn/drv/taito/taito_m68705.cpp
        burn/drv/taito/tc0100scn.cpp
        burn/drv/taito/tc0110pcr.cpp
        burn/drv/taito/tc0140syt.cpp
        burn/drv/taito/tc0150rod.cpp
        burn/drv/taito/tc0180vcu.cpp
        burn/drv/taito/tc0220ioc.cpp
        burn/drv/taito/tc0280grd.cpp
        burn/drv/taito/tc0360pri.cpp
        burn/drv/taito/tc0480scp.cpp
        burn/drv/taito/tc0510nio.cpp
        burn/drv/taito/tc0640fio.cpp
        burn/drv/taito/tnzs_prot.cpp
        burn/drv/toaplan/d_slapfght.cpp
        burn/drv/toaplan/d_dogyuun.cpp
        burn/drv/toaplan/d_ghox.cpp
        burn/drv/toaplan/d_snowbro2.cpp
        burn/drv/toaplan/d_shippumd.cpp
        burn/drv/toaplan/d_kbash.cpp
        burn/drv/toaplan/d_demonwld.cpp
        burn/drv/toaplan/d_zerowing.cpp
        burn/drv/toaplan/d_truxton.cpp
        burn/drv/toaplan/d_bbakraid.cpp
        burn/drv/toaplan/d_battleg.cpp
        burn/drv/toaplan/d_kbash2.cpp
        burn/drv/toaplan/d_tekipaki.cpp
        burn/drv/toaplan/toa_gp9001.cpp
        burn/drv/toaplan/d_rallybik.cpp
        burn/drv/toaplan/d_mahoudai.cpp
        burn/drv/toaplan/d_vfive.cpp
        burn/drv/toaplan/d_fixeight.cpp
        burn/drv/toaplan/d_hellfire.cpp
        burn/drv/toaplan/d_outzone.cpp
        burn/drv/toaplan/toa_extratext.cpp
        burn/drv/toaplan/toa_bcu2.cpp
        burn/drv/toaplan/d_truxton2.cpp
        burn/drv/toaplan/d_batsugun.cpp
        burn/drv/toaplan/d_samesame.cpp
        burn/drv/toaplan/d_batrider.cpp
        burn/drv/toaplan/d_vimana.cpp
        burn/drv/toaplan/d_pipibibs.cpp
        burn/drv/toaplan/toa_palette.cpp
        burn/drv/toaplan/toaplan.cpp
        burn/drv/toaplan/toaplan1.cpp
        burner/conc.cpp
        burner/cong.cpp
        burner/dat.cpp
        burner/gamc.cpp
        burner/gami.cpp
        burner/image.cpp
        burner/ioapi.c
        burner/misc.cpp
        burner/sshot.cpp
        burner/state.cpp
        burner/statec.cpp
        burner/un7z.cpp
        burner/unzip.c
        burner/zipfn.cpp
        burner/sdl/bzip.cpp
        burner/sdl/config.cpp
        burner/sdl/drv.cpp
        burner/sdl/inpdipsw.cpp
#        burner/sdl/main.cpp
#        burner/sdl/run.cpp
#        burner/sdl/stated.cpp
        burner/sdl/stringset.cpp
        cpu/s2650_intf.cpp
        cpu/pic16c5x_intf.cpp
        cpu/h6280_intf.cpp
#        cpu/mips3_intf.cpp
        cpu/m6805_intf.cpp
        cpu/m6502_intf.cpp
        cpu/m68000_intf.cpp
        cpu/hd6309_intf.cpp
        cpu/konami_intf.cpp
        cpu/m6800_intf.cpp
        cpu/arm7_intf.cpp
        cpu/nec_intf.cpp
        cpu/m6809_intf.cpp
        cpu/arm_intf.cpp
        cpu/tlcs90_intf.cpp
        cpu/z80_intf.cpp
        cpu/arm/arm.cpp
        cpu/arm7/arm7.cpp
        cpu/h6280/h6280.cpp
        cpu/hd6309/hd6309.cpp
        cpu/hd6309/hd6309.cpp
        cpu/i8039/i8039.cpp
        cpu/konami/konami.cpp
        cpu/m68k/m68k_in.c
        cpu/m68k/m68kcpu.c
        cpu/m68k/m68kdasm.c
        cpu/m68k/m68kfpu.c
        cpu/m68k/m68kmake.c
        cpu/m68k/m68kops.c
        cpu/m6502/m6502.cpp
        cpu/m6800/m6800.cpp
        cpu/m6805/m6805.cpp
        cpu/m6809/m6809.cpp
        cpu/nec/nec.cpp
        cpu/s2650/s2650.cpp
        cpu/sh2/sh2.cpp
        cpu/z80/z80.cpp
        cpu/z80/z80daisy.cpp
        cpu/tlcs90/tlcs90.cpp
        cpu/pic16c5x/pic16c5x.cpp
        dep/libs/lib7z/7zBuf2.c
        dep/libs/lib7z/7zFile.c
        dep/libs/lib7z/7zCrcOpt.c
        dep/libs/lib7z/7zCrc.c
        dep/libs/lib7z/Bra.c
        dep/libs/lib7z/7zIn.c
        dep/libs/lib7z/Bcj2.c
        dep/libs/lib7z/7zDec.c
        dep/libs/lib7z/7zAlloc.c
        dep/libs/lib7z/Alloc.c
        dep/libs/lib7z/Bra86.c
        dep/libs/lib7z/7zBuf.c
        dep/libs/lib7z/7zStream.c
        dep/libs/lib7z/BraIA64.c
        dep/libs/lib7z/CpuArch.c
        dep/libs/lib7z/Delta.c
        dep/libs/lib7z/LzFind.c
        dep/libs/lib7z/LzFindMt.c
        dep/libs/lib7z/Lzma2Dec.c
        dep/libs/lib7z/Lzma2Enc.c
        dep/libs/lib7z/Lzma86Dec.c
        dep/libs/lib7z/Lzma86Enc.c
        dep/libs/lib7z/LzmaDec.c
        dep/libs/lib7z/LzmaEnc.c
        dep/libs/lib7z/LzmaLib.c
        dep/libs/lib7z/MtCoder.c
        dep/libs/lib7z/Ppmd7.c
        dep/libs/lib7z/Ppmd7Dec.c
        dep/libs/lib7z/Ppmd7Enc.c
        dep/libs/lib7z/Sha256.c
        dep/libs/lib7z/Threads.c
        dep/libs/lib7z/Xz.c
        dep/libs/lib7z/XzCrc64.c
        dep/libs/lib7z/XzDec.c
        dep/libs/lib7z/XzEnc.c
        dep/libs/lib7z/XzIn.c
        intf/interface.cpp
        intf/audio/aud_dsp.cpp
#        intf/audio/aud_interface.cpp
        intf/audio/lowpass2.cpp
#        intf/audio/sdl/aud_sdl.cpp
        intf/input/inp_interface.cpp
#        intf/input/sdl/inp_sdl.cpp
        intf/video/vid_interface.cpp
#        intf/video/vid_softfx.cpp
        intf/video/vid_support.cpp
#        intf/video/sdl/vid_sdlfx.cpp
#        intf/video/sdl/vid_sdlopengl.cpp
        )

find_library(log-lib log)
target_link_libraries(arcade ${log-lib})

find_library(z-lib z)
target_link_libraries(arcade ${z-lib})

target_link_libraries(arcade ../libpng)

target_link_libraries(arcade ../SDL)